styled the nav bar Ul and Li

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,39 @@
     box-sizing: border-box;
 }
 
+
+
 body{
     background-color: snow;
     color:black;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif ;
     line-height: 1.6em;
+}
+.container{
+    width: 80%;
+    margin: auto;
+}
+
+#header{
+    text-align: center;
+    margin-top: 20px;
+    background-color: lightgreen;
+    padding: 20px;
+
+}
+
+#nav_bar{
+    background-color: darkgray;
+    color: white;
+}
+
+#nav_bar ul{
+    padding: 0;
+    list-style: none;
+}
+
+#nav_bar li{
+    display: inline;
+    margin-left: 250px;
 }
